2008-10-12  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/Makefile.am:
	Add apexsink to SUBDIRS. Fixes bug #555912.

2008-10-11  Jan Schmidt  <jan.schmidt@sun.com>

	* tests/check/pipelines/metadata.c:
	Make the metadata test not fail when jpegenc isn't available....
	as it isn't here, because it's not in this module, and
	therefore not in the plugin path when the check runs.

2008-10-10  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvparse.c: (gst_flv_parse_tag_audio),
	(gst_flv_parse_tag_video):
	Use gst_pad_alloc_buffer_and_set_caps() to make sure we get
	a buffer with caps that we can work with (i.e. the pad's caps).

	Add non-keyframe video frames to the index too but without the
	keyframe flag.

	Add audio frames to the index only if we have no video stream.

2008-10-10  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvparse.c: (gst_flv_parse_tag_audio),
	(gst_flv_parse_tag_video):
	Create pads from the pad templates, use fixed caps on them
	and only activate them after the caps are set.

2008-10-10  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Disable flacparse for this release as it's too buggy.

2008-10-10  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/flacparse/gstbaseparse.c (gst_base_parse_push_buffer),
	(gst_base_parse_update_upstream_durations):
	Fix compiler warning on OS/X about parameters not matching
	the debug format string.

2008-10-09  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/deinterlace2/tvtime/tomsmocomp.c:
	(gst_deinterlace_method_tomsmocomp_class_init):
	Fix unused variable compiler warning when not building
	X86 assembly.

2008-10-09  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvdemux.c: (gst_flv_demux_loop):
	* gst/flv/gstflvparse.c: (gst_flv_parse_tag_timestamp):
	* gst/flv/gstflvparse.h:
	Get an approximate duration of the file by looking at the timestamp